# colomar

./: .gitignore  Cargo.toml  README.md  rustc-ice-2023-12-09T13_43_03-7280.txt  rustc-ice-2023-12-09T13_55_19-9588.txt  rustc-ice-2023-12-09T13_56_39-14284.txt  rustc-ice-2023-12-09T13_58_49-19400.txt  rustc-ice-2023-12-09T14_00_56-4472.txt  rustc-ice-2023-12-09T15_35_31-18524.txt
codegen/: Cargo.toml
colomar_macros/: Cargo.toml
colomar_macros/src/: derive_interned.rs  lib.rs
colomar_macros/tests/: interned.rs
compiler/: Cargo.toml  hello.txt
compiler/src/: cir.rs  cst.rs  database.rs  error.rs  error_reporter.rs  lib.rs  source_cache.rs  span.rs  trisult.rs  wir.rs  wst.rs
compiler/src/analysis/: arg.rs  call.rs  decl.rs  def.rs  enum.rs  event.rs  file.rs  function.rs  im.rs  import.rs  interner.rs  namespace.rs  property.rs  rule.rs  struct.rs  type.rs
compiler/src/codegen/: call.rs  mod.rs  rule.rs  variables.rs
compiler/src/language/: lexer.rs  parser.rs
compiler/src/loader/: error_reporter.rs  mod.rs  wscript_impl.rs
compiler/src/printer/: mod.rs  workshop_global_rule_template.txt
compiler/src/workshop/: lexer.rs  parser.rs
compiler/tests/: lib.rs  parser_errors.rs  test_analysis_errors.rs  test_compiler.rs  test_lexer_errors.rs  test_parser.rs  test_parser_errors.rs  test_span_key_macro.rs
compiler/tests/errors/: mod.rs
docs/explanation/: array.md  references.md  struct.md  types.md
docs/reference/: enum.md  file_structure.md  import.md  preprocessor.md  readme.md  rule.md  struct.md  types.md  variables.md
dsl/: DSL.md  advanced.colo  functions.md  proto.colo  rule.colo  std.colo  test  test.colo  test.txt  workshop.txt
dsl/example/: damage.colo  (+9 more)
macros/: Cargo.toml
rustc_ice/: README.md  rustc-ice-2023-12-09T13_44_35-16924.txt  rustc-ice-2023-12-09T13_50_10-3508.txt  rustc-ice-2023-12-10T14_46_54-18660.txt  rustc-ice-2023-12-11T18_00_30-24060.txt  rustc-ice-2023-12-23T01_31_48-25660.txt  rustc-ice-2023-12-28T14_14_45-1060.txt  rustc-ice-2023-12-29T01_05_41-1828.txt  rustc-ice-2024-01-01T16_14_12-6628.txt  rustc-ice-2024-01-01T16_19_18-17784.txt  rustc-ice-2024-01-03T20_34_14-18124.txt  rustc-ice-2024-01-04T18_00_27-6280.txt  rustc-ice-2024-01-04T18_00_39-15888.txt  rustc-ice-2024-01-06T22_24_34-22548.txt  rustc-ice-2024-01-06T22_26_16-21924.txt  rustc-ice-2024-01-06T22_26_48-18572.txt
snippets/: enum.colo  rule_decl.colo  rule_header.colo
src/: README.md  compiler.rs  intermediate.rs  main.rs  multimap.rs  test_assert.rs  workshop.rs
test_common/: Cargo.toml
tests/: test_span_key_macro.rs
workshop/: rule.ows
(+195 files in other folders)
