[package]
name = "colomar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2" # Lexer and parser
salsa = "0.17.0-pre.2" # Analysis and compiler
smol_str = "0.2.0"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }

[dev-dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
test-case = "3.1.0"
derive-new = "0.5.9"
anyhow = "1.0.71"