[package]
name = "colomar"
authors = ["Gleyder"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 'src' should only be dependent on compiler
[dependencies]
either = "1.8.1"
chumsky = "0.9.2" # Lexer and parser
ariadne = "0.3.0"
colomar-macros = { path = "macros" }
compiler = { path = "compiler" }

[workspace]
members = ["macros", "compiler"]